# Automata-Simulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
input_json/: input-eq1.json  input-eq2.json  input-ssc2.json  input-tfa2.json
output_dot/: DFA.dot
src/: DFA.cpp  DFA.h  NFA.cpp  NFA.h  State.cpp  State.h  Transition.cpp  Transition.h  Utils.cpp  Utils.h  json.hpp
src/html/: _d_f_a_8h_source.html  _n_f_a_8h_source.html  _state_8h_source.html  _transition_8h_source.html  _utils_8h_source.html  annotated.html  class_d_f_a-members.html  class_d_f_a.html  class_n_f_a-members.html  class_n_f_a.html  class_pair-members.html  class_pair.html  class_state-members.html  class_state.html  class_transition-members.html  class_transition.html  classes.html  classnlohmann_1_1basic__json-members.html  classnlohmann_1_1basic__json.html  classnlohmann_1_1detail_1_1binary__reader-members.html  classnlohmann_1_1detail_1_1binary__reader.html  classnlohmann_1_1detail_1_1binary__writer-members.html  classnlohmann_1_1detail_1_1binary__writer.html  classnlohmann_1_1detail_1_1exception-members.html  classnlohmann_1_1detail_1_1exception.html  classnlohmann_1_1detail_1_1file__input__adapter-members.html  classnlohmann_1_1detail_1_1file__input__adapter.html  classnlohmann_1_1detail_1_1input__adapter-members.html  classnlohmann_1_1detail_1_1input__adapter.html  classnlohmann_1_1detail_1_1input__buffer__adapter-members.html  classnlohmann_1_1detail_1_1input__buffer__adapter.html  classnlohmann_1_1detail_1_1input__stream__adapter-members.html  (+245 more)
src/latex/: annotated.tex  refman.tex  (+61 more)
(+107 files in other folders)
